--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
- 
+ <head>
+  <title>Jessica Salisbury is Creating Websites</title>
+  <link type="text/css" rel="stylesheet" href="styles.css">
+ </head>
 <body>
   <h1>Jessica Salisbury</h1>
   <p>This is a website I have created.</p>
